test/langtools/tools/javac/valhalla/lworld-values/CheckFinal.out
CheckFinal.java:8:11: compiler.err.value.must.be.final
CheckFinal.java:9:9: compiler.err.value.field.must.be.final
CheckFinal.java:13:17: compiler.err.value.field.must.be.final
3 errors
